--- a/tcc-front-end/src/app/dashboard/dashboard-main/indicacoes/indicacoes.component.html
+++ b/tcc-front-end/src/app/dashboard/dashboard-main/indicacoes/indicacoes.component.html
@@ -27,7 +27,7 @@
               </div>
         </div>
         <div class="box-footer">
-          <button *ngIf="indicacoes_num>5" (click)="getMoreIndications()" class="btn btn-primary"><b>Ver mais</b></button>
+          <button *ngIf="showMoreIndications()" (click)="getMoreIndications()" class="btn btn-primary"><b>Ver mais</b></button>
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="box-footer">
-          <button *ngIf="recebidos_num>5" (click)="getMoreRecievedIndications()" class="btn btn-primary"><b>Ver mais</b></button>
+          <button *ngIf="showMoreRecieved()" (click)="getMoreRecievedIndications()" class="btn btn-primary"><b>Ver mais</b></button>
         </div>
         </div>
     </div>
@@ -106,7 +106,7 @@
             </div>
           </div>
           <div class="box-footer"> 
-            <button *ngIf="enviados_num>5" (click)="getMoreSentIndications()" class="btn btn-primary"><b>Ver mais</b></button>    
+            <button *ngIf="showMoreSent()" (click)="getMoreSentIndications()" class="btn btn-primary"><b>Ver mais</b></button>    
           </div>
         </div>
     </div>
