--- a/tcc-front-end/src/app/dashboard/dashboard-main/busca/busca.component.html
+++ b/tcc-front-end/src/app/dashboard/dashboard-main/busca/busca.component.html
@@ -1,4 +1,4 @@
-<section class = "content">
+<section class = "content" style="height: auto;">
   <div class = "box box-solid">
     <div class = "box-header with-border">
         <h2 class="box-title"><b>Buscar</b></h2>
