--- a/tcc-front-end/src/app/dashboard/dashboard-main/perfil/perfil.component.html
+++ b/tcc-front-end/src/app/dashboard/dashboard-main/perfil/perfil.component.html
@@ -94,7 +94,7 @@
         </div>
     </div>
 <!-- *ngIf="relacao.type === 'IS_FRIEND'" -->
-    <button  class="fixed-button wobble" type="button"  data-toggle="modal" data-target="#myModal" >  
+    <button  *ngIf="relacao.type === 'IS_FRIEND'" class="fixed-button wobble" type="button"  data-toggle="modal" data-target="#myModal" >  
         <i class="fa fa-edit fa-2x"></i>
     </button>
 </section>
