--- a/tcc-front-end/src/app/dashboard/dashboard-main/amigos/amigos.component.html
+++ b/tcc-front-end/src/app/dashboard/dashboard-main/amigos/amigos.component.html
@@ -1,4 +1,4 @@
-<section class="content">
+<section class="content" style="height: auto;">
   <div class = "row">
     <div class="col-md-12">
       <div class = "box box-solid">
