--- a/tcc-front-end/src/app/dashboard/dashboard-main/dashboard-main.component.html
+++ b/tcc-front-end/src/app/dashboard/dashboard-main/dashboard-main.component.html
@@ -1,4 +1,4 @@
-<section class = "content">
+<section class = "content" style="height: auto;">
     <div class="row">
         <div class="col-md-4">
             <div class="small-box bg-aqua">
